--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="lavender">#7144df</color>
     <color name="light_lavender">#f2f1f6</color>
     <color name="light_gray">#979398</color>
+    <color name="Dark_blue_gray">#546E7A</color>
     <color name="violet">#3c0094</color>
 </resources>
