--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -281,16 +281,16 @@
         android:id="@+id/textViewLorem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_max="500dp"
         android:text="@string/LoremText"
         android:textAlignment="center"
-        android:textColor="#546E7A"
+        android:textColor="@color/Dark_blue_gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintVertical_bias="0.281"
+        app:layout_constraintWidth_max="500dp" />
 
     <TextView
         android:id="@+id/textViewHi"
