--- a/app/src/main/res/layout-land/activity_save_trip_step1.xml
+++ b/app/src/main/res/layout-land/activity_save_trip_step1.xml
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:contentDescription="@string/arcimg"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
