--- a/app/src/main/res/layout/activity_save_trip_step2.xml
+++ b/app/src/main/res/layout/activity_save_trip_step2.xml
@@ -302,65 +302,73 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         android:background="@color/light_lavender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
+        <androidx.constraintlayout.helper.widget.Flow
+            android:id="@+id/flow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            app:constraint_referenced_ids="buttonSave,buttonSummary,buttonPrev,buttonCancel"
+            app:flow_horizontalGap="16dp"
+            app:flow_horizontalStyle="packed"
+            app:flow_verticalAlign="center"
+            app:flow_wrapMode="aligned"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="16dp"
+            android:layout_margin="8dp"
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/save"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/flow"
+            app:layout_constraintTop_toTopOf="@+id/flow" />
 
         <Button
             android:id="@+id/buttonSummary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="16dp"
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/summary"
             android:textColor="@color/white"
-            app:layout_constraintStart_toEndOf="@id/buttonSave"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/buttonSave"
+            app:layout_constraintTop_toTopOf="@+id/flow"
+            />
 
         <Button
             android:id="@+id/buttonPrev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="20dp"
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/previous"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonSave" />
+            app:layout_constraintStart_toStartOf="@+id/flow"
+            app:layout_constraintTop_toBottomOf="@+id/buttonSave"
+            />
 
         <Button
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="20dp"
             android:backgroundTint="@color/violet"
             android:minWidth="130dp"
             android:text="@string/quit"
             android:textColor="@color/white"
-            app:layout_constraintStart_toEndOf="@id/buttonPrev"
-            app:layout_constraintTop_toBottomOf="@id/buttonSummary" />
+            app:layout_constraintStart_toEndOf="@+id/buttonPrev"
+            app:layout_constraintTop_toTopOf="@+id/buttonPrev"
+            />
 
         <View
             android:id="@+id/divider5"
