--- a/app/src/main/res/layout-land/activity_save_trip_step1.xml
+++ b/app/src/main/res/layout-land/activity_save_trip_step1.xml
@@ -148,6 +148,7 @@
                 android:textColor="@color/white"
                 android:textColorHint="@color/transperent_white"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/divider8"
                 app:layout_constraintTop_toBottomOf="@+id/TextViewCity"
                 tools:ignore="TextContrastCheck" />
 
@@ -162,7 +163,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/divider8"
-                app:layout_constraintHorizontal_bias="0.455"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
@@ -178,7 +178,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.595"
                 app:layout_constraintStart_toEndOf="@+id/divider8"
                 app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
@@ -195,6 +194,7 @@
                 android:padding="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/transperent_white"
+                app:layout_constraintEnd_toStartOf="@+id/divider8"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/TextViewEBudget"
                 tools:ignore="TextContrastCheck" />
