--- a/app/src/main/res/layout/activity_save_trip_step3.xml
+++ b/app/src/main/res/layout/activity_save_trip_step3.xml
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:padding="5dp"
-                        android:text="Combien de personnes étaient présentes dans ce voyage :"
+                        android:text="@string/people_on_trip"
                         android:textAlignment="center"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
@@ -217,7 +217,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:padding="5dp"
-                        android:text="Quel moyen de locomotion avez-vous utilisé pour faire ce voyage :"
+                        android:text="@string/transport_trip"
                         android:textAlignment="center"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
@@ -250,7 +250,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:padding="5dp"
-                        android:text="Sur une échelle de 1 à 10, comment évalueriez-vous votre satisfaction globale de ce voyage :"
+                        android:text="@string/satisfaction_globals_cale"
                         android:textAlignment="center"
                         android:textColor="#5d5a63"
                         android:textSize="18sp"
