--- a/app/src/main/res/layout-land/activity_history.xml
+++ b/app/src/main/res/layout-land/activity_history.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lavender"
-    tools:context=".HistoryActivity">
+    tools:context=".Activities.HistoryActivity">
 
     <ImageView
         android:id="@+id/imageViewDecoArc"
