--- a/app/src/main/res/layout-land/fragment_bottom_save_trip_steps.xml
+++ b/app/src/main/res/layout-land/fragment_bottom_save_trip_steps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomSaveTripStepsFragment">
+    tools:context=".Fragments.BottomSaveTripStepsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
