--- a/app/src/main/res/layout/activity_details_trip.xml
+++ b/app/src/main/res/layout/activity_details_trip.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lavender"
-    tools:context=".DetailsTripActivity">
+    tools:context=".Activities.DetailsTripActivity">
 
     <ImageView
         android:id="@+id/imageViewArcDeco1"
