--- a/app/src/main/res/layout/activity_save_trip_step4.xml
+++ b/app/src/main/res/layout/activity_save_trip_step4.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lavender"
-    tools:context=".SaveTripActivityStep4">
+    tools:context=".Activities.SaveTripSteps.SaveTripActivityStep4">
 
     <TextView
         android:id="@+id/textViewTitle"
